# klock

./: COMPILE  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
lib/: Makefile.in
src/: Annotation.cc  Annotation.h  BSlice.cc  BSlice.h  CallGraph.cc  CallGraph.h  CallbackPass.cc  CallbackPass.h  FSlice.cc  FSlice.h  IFSlice.cc  IFSlice.h  IterativeModulePass.cc  IterativeModulePass.h  Makefile.am  Makefile.in  ProtectPass.cc  ProtectPass.h  ProtectSummary.h  ProtectSummaryPass.cc  ProtectSummaryPass.h  TimeGlobal.cc  TimeGlobal.h  WholePass.cc  WholePass.h
src/LLVMSlicer/: Makefile.am  Makefile.in
src/LLVMSlicer/Languages/: LLVM.cpp  LLVM.h
src/LLVMSlicer/Slicing/: FunctionStaticSlicer.cpp  FunctionStaticSlicer.h  FwdFunctionStaticSlicer.cpp  FwdFunctionStaticSlicer.h  FwdStaticSlicerHelper.cpp  FwdStaticSlicerHelper.h  Helper.cpp  Helper.h  IntrsctFwdFunctionStaticSlicer.cpp  IntrsctFwdFunctionStaticSlicer.h  StaticSlicerHelper.cpp  StaticSlicerHelper.h
src/llvm/: DataLayout.h  IRBuilder.h
test/: Makefile.in  kint-cc1  kint-g++  kint-gcc  run.sh
test/cases/: compiler.h  run.sh  try-func.c  try-func.ll  try-global.c  try-global.ll  try-if.c  try-nocg.c  try-nocg.ll  try-same-var-2.c  try-same-var-2.ll  try-same-var-2.out  try-same-var.c  try-same-var.ll  try-while.c  try.c  try2.c
